# qtPluginTest

./: CMakeLists.txt
host/: CMakeLists.txt  hostwindow.cpp  hostwindow.h  main.cpp
interfaces/: myplugininterface.h
my_plugin/: CMakeLists.txt  myplugin.cpp  myplugin.h  myplugin.json
